Remove hardcoded credentials

--- a/ms-logistica/src/main/resources/application.properties
+++ b/ms-logistica/src/main/resources/application.properties
@@ -28,4 +28,4 @@ logging.level.com.tpi.logistica=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
 # Google Maps API
-google.maps.api.key=${GOOGLE_MAPS_API_KEY:AIzaSyBzEIPhIq9sjktQSXUGi10qhJkp3blmb20}
+google.maps.api.key=${GOOGLE_MAPS_API_KEY_ENV}
